<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AndyBase</string>
    <string name="introtitle">Introduction to Android</string>
    <string name="introduction_to_andybase_application">Introduction to AndyBase Application</string>
    <string name="intro_para">AndyBase is a comprehensive Android application crafted as a learning and reference tool for both novice and experienced Android developers. The application covers a wide array of fundamental and advanced topics essential for mastering Android development. From basic UI components to intricate system services, AndyBase provides hands-on demos and sample code snippets to facilitate a deeper understanding of each topic.</string>
    <string name="features_and_content">Features and Content</string>
    <string name="features_para">AndyBase encompasses all basic topics such as creating user interfaces with XML, handling user interactions, working with data storage options including SQLite and SharedPreferences, and managing app navigation with activities and fragments. Additionally, it delves into more advanced topics like integrating third-party libraries, implementing background services, managing network operations using Retrofit and Volley, and leveraging modern architecture components like ViewModel, LiveData, and Room.</string>
    <string name="Interactive_para">Each topic in AndyBase is accompanied by interactive demos that allow users to see the concepts in action. For instance, when learning about RecyclerViews, users can interact with a demo showcasing a list of items, complete with add, delete, and update functionalities. This hands-on approach ensures that users not only read about the concepts but also understand how to implement them in real-world scenarios.</string>
    <string name="demo_para">AndyBase provides clear and concise demo code for each topic. For example, the demo for implementing a RecyclerView includes code snippets for creating the adapter, defining the item layout, and managing the RecyclerView in the activity. Users can view, copy, and experiment with this code directly within the application, fostering a practical learning experience.</string>
    <string name="version_para">AndyBase is fully compatible with the latest versions of Android, ensuring users can learn and implement features using the most up-to-date APIs and development practices. The app is designed to work seamlessly on devices running Android 12 and beyond, incorporating modern development guidelines, such as the use of Jetpack libraries and adherence to Material Design principles. This ensures that users are equipped with the knowledge and skills to develop applications that perform optimally on the latest Android devices.</string>
    <string name="manifest_para1">AndroidManifest.xml, the Manifest XML file found in the root directory of each Android project, is included in every Android project. Because it specifies our applications components, requirements, structure, and metadata, the manifest file is a crucial component of our software. Each Activity, Service, Content Provider, and Broadcast Receiver that makes up the application is represented by a node in this file, and their coordination with one another and other applications is determined by intent filters and permissions.\n\nThe application metadata, such as its icon, version number, themes, and so on, is also specified in the manifest file. Moreover, extra top-level nodes can define platform, hardware, and screen requirements as well as any necessary permissions and unit tests. A root manifest tag with a package attribute set to the projects package makes up the manifest. Additionally, it must have the xmls:android attribute, which will provide a number of system attributes that are used in the file. The current version of the application is defined using the versionCode attribute, which takes the form of an integer that increases with each iteration of the version owing to updates. Moreover, a public version that will be shown to users is specified using the versionName attribute.\n\nA typical manifest file looks as:</string>
    <string name="manifest_para2"><![CDATA[<?xml version=\'1.0\' encoding=\'utf-8\'?>\n <manifest xmlns:android=\'http://schemas.android.com/apk/res/android\'\n xmlns:tools=\'http://schemas.android.com/tools\'\n package=\'com.example.AndyBase\'\n android:versionCode=\'1\'\n android:versionName=\'1.0\'\n android:installLocation=\'preferExternal\'>\n <uses-sdk \n android:minSdkVersion=\'18\' \n android:targetSdkVersion=\'27\' />\n <application\n android:allowBackup=\'true\'\n android:dataExtractionRules=\'@xml/data_extraction_rules\'\n android:fullBackupContent=\'@xml/backup_rules\'\n android:icon=\'@mipmap/ic_launcher\'\n android:label=\'@string/app_name\'\n android:roundIcon=\'@mipmap/ic_launcher_round\'\n android:supportsRtl=\'true\'\n android:theme=\'@style/Theme.MyApplication\'\n tools:targetApi=\'31\'>\n <activity\n android:name=\'.MainActivity\'\n android:exported=\'true\'>\n <intent-filter>\n <action android:name=\'android.intent.action.MAIN\' />\n <category android:name=\'android.intent.category.LAUNCHER\' />\n </intent-filter>\n </activity>\n </application>\n </manifest>]]></string>
    <string name="manifest_para3"><![CDATA[The main component of the AndroidManifest.xml file is known as manifest. Additionally, the packaging field describes the activity class package name. It must contain an <application> element with the xmlns:android and package attribute specified.]]></string>
    <string name="manifest_para4"><![CDATA[<?xml version=\'1.0\' encoding=\'utf-8\'?>\n <manifest xmlns:android=\'http://schemas.android.com/apk/res/android\'\n xmlns:tools=\'http://schemas.android.com/tools\'\n package=\'com.example.AndyBase\'\n android:versionCode=\'1\'\n android:versionName=\'1.0\'\n android:installLocation=\'preferExternal\'>\n <application>\n </application>\n </manifest>]]></string>
    <string name="manifest_para6"><![CDATA[<uses-sdk android:minSdkVersion=\'18\' android:targetSdkVersion=\'27\' />]]></string>
    <string name="manifest_para5"><![CDATA[It is used to specify the target SDK, for which it has been designed, using a combination of minSdkVersion, maxSdkVersion, and targetSdkVersion attributes, and the minimum and maximum SDK version by means of an API Level integer that must be present on a device in order for our application to function properly. That is part of the <manifest> element.]]></string>
    <string name="manifest_para7"><![CDATA[It outlines a system permission that must be granted by the user for the app to function properly and is contained within the <manifest> element. When an application is installed (on Android 5.1 and lower devices or Android 6.0 and higher), the user must grant the application permissions.]]></string>
    <string name="manifest_para8"><![CDATA[<uses-permission android:name=\'android.permission.CAMERA\' android:maxSdkVersion=\'18\' />]]></string>
    <string name="manifest_para9">There can only be one application node in a manifest. It specifies your application metadata (such as its title, icon, and theme) using attributes. We should add a debuggable attribute to our builds during development, and we should make sure to disable it for release builds. This will allow debugging to occur. The Activity, Service, Content Provider, and Broadcast Receiver nodes that define the application components are also contained within the application node. It is possible to specify the name of our custom application class by using the android:name attribute.</string>
    <string name="manifest_para10"><![CDATA[<application\n android:name=\'.GeeksForGeeks\'\n android:allowBackup=\'true\'\n android:dataExtractionRules=\'@xml/data_extraction_rules\'\n android:fullBackupContent=\'@xml/backup_rules\'\n android:icon=\'@drawable/gfgIcon\'\n android:label=\'@string/app_name\'\n android:roundIcon=\'@mipmap/ic_launcher_round\'\n android:supportsRtl=\'true\'\n android:theme=\'@android:style/Theme.Light\'\n android:debuggable=\'true\'\n tools:targetApi=\'31\'>\n </application>]]></string>
    <string name="manifest_para11"><![CDATA[It defines a shared library against which the application must be linked. This element instructs the system to add the library’s code to the package’s class loader. It is contained within the <application> element.]]></string>
    <string name="manifest_para12"><![CDATA[<uses-library android:name=\'android.test.runner\' android:required=\'true\' />]]></string>
    <string name="manifest_para13"><![CDATA[The Activity sub-element of an application refers to an activity that needs to be specified in the AndroidManifest.xml file. It has various characteristics, like label, name, theme, launchMode, and others. In the manifest file, all elements must be represented by <activity>. Any activity that is not declared there won’t run and won’t be visible to the system. It is contained within the <application> element.]]></string>
    <string name="manifest_para14"><![CDATA[<activity android:name=\'.MainActivity\' android:exported=\'true\'> </activity>]]></string>
    <string name="manifest_para15"><![CDATA[It is the activity sub-element that indicates the kind of intent to which the broadcast receiver, service, or activity can respond. It lets the component to receive a specific kind of intent while removing those that aren\'t necessary for it. At least one <action> element must be present in the intent filter.]]></string>
    <string name="manifest_para16"><![CDATA[<intent-filter>\n <action android:name=\'android.intent.action.MAIN\'/>\n <category android:name=\'android.intent.category.LAUNCHER\' />\n </intent-filter>]]></string>
    <string name="manifest_para17"><![CDATA[It adds an action for the intent-filter. It is contained within the <intent-filter> element.]]></string>
    <string name="manifest_para18"><![CDATA[<action android:name=\'android.intent.action.MAIN\' />]]></string>
    <string name="manifest_para19"><![CDATA[It adds a category name to an intent-filter. It is contained within the <intent-filter> element.]]></string>
    <string name="manifest_para20"><![CDATA[<category android:name=\'android.intent.category.LAUNCHER\' />]]></string>
    <string name="manifest_para21">The uses-configuration components are used to specify the combination of input mechanisms that are supported by our application. It is useful for games that require particular input controls.</string>
    <string name="manifest_para22"><![CDATA[<uses-configuration\n android:reqTouchScreen=\'finger\'\n android:reqNavigation=\'trackball\'\n android:reqHardKeyboard=\'true\'\n android:reqKeyboardType=\'qwerty\'/>\n <uses-configuration\n android:reqTouchScreen=\'finger\'\n android:reqNavigation=\'trackball\'\n android:reqHardKeyboard=\'true\'\n android:reqKeyboardType=\'twelvekey\'/>]]></string>
    <string name="manifest_para23">It is used to specify which hardware features your application requires. This will prevent our application from being installed on a device that does not include a required piece of hardware such as NFC hardware, as follows:</string>
    <string name="manifest_para24"><![CDATA[<uses-feature android:name=\'android.hardware.nfc\' />]]></string>
    <string name="manifest_para25">It is used to create permissions to restrict access to shared application components. We can also use the existing platform permissions for this purpose or define your own permissions in the manifest.</string>
    <string name="manifest_para26"><![CDATA[<permission\n android: name=\'com.paad.DETONATE_DEVICE\'\n android:protectionLevel=\'dangerous\'\n android:label=\'Self Destruct\'\n android:description=\'@string/detonate_description\'>\n </permission>]]></string>
</resources>