<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="53dp"
        android:layout_height="34dp"
        android:layout_marginStart="1dp"
        android:onClick="manifestimage"
        android:layout_marginTop="13dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="Manifest File"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#737070"
        android:layout_marginTop="@dimen/_40sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_120sdp"
        android:layout_marginBottom="@dimen/_50sdp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view2"
        app:layout_constraintVertical_bias="0.582">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10sp"
                android:text="@string/manifest_para1"
                android:textColor="@color/black"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10sp"
                android:text="@string/manifest_para2"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10sp"
                android:text="Manifest"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10sp"
                android:text="@string/manifest_para3"
                android:textColor="@color/black"
                android:textSize="14dp" />
            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10sp"
                android:text="@string/manifest_para4"
                android:textColor="@color/black"
                android:textSize="14dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10sp"
                android:text="uses-sdk"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10sp"
                android:text="@string/manifest_para5"
                android:textColor="@color/black"
                android:textSize="14dp"/>
            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10sp"
                android:text="@string/manifest_para6"
                android:textColor="@color/black"
                android:textSize="14dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10sp"
                android:text="uses-permission"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10sp"
                android:text="@string/manifest_para7"
                android:textColor="@color/black"
                android:textSize="14dp"/>
            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10sp"
                android:text="@string/manifest_para8"
                android:textColor="@color/black"
                android:textSize="14dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10sp"
                android:text="application"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10sp"
                android:text="@string/manifest_para9"
                android:textColor="@color/black"
                android:textSize="14dp"/>
            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10sp"
                android:text="@string/manifest_para10"
                android:textColor="@color/black"
                android:textSize="14dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10sp"
                android:text="uses-library"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10sp"
                android:text="@string/manifest_para11"
                android:textColor="@color/black"
                android:textSize="14dp" />
            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10sp"
                android:text="@string/manifest_para12"
                android:textColor="@color/black"
                android:textSize="14dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10sp"
                android:text="activity"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10sp"
                android:text="@string/manifest_para13"
                android:textColor="@color/black"
                android:textSize="14dp" />
            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10sp"
                android:text="@string/manifest_para14"
                android:textColor="@color/black"
                android:textSize="14dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10sp"
                android:text="intent-filter"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10sp"
                android:text="@string/manifest_para15"
                android:textColor="@color/black"
                android:textSize="14dp"/>
            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10sp"
                android:text="@string/manifest_para16"
                android:textColor="@color/black"
                android:textSize="14dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10sp"
                android:text="action"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10sp"
                android:text="@string/manifest_para17"
                android:textColor="@color/black"
                android:textSize="14dp" />
            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10sp"
                android:text="@string/manifest_para18"
                android:textColor="@color/black"
                android:textSize="14dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10sp"
                android:text="category"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10sp"
                android:text="@string/manifest_para19"
                android:textColor="@color/black"
                android:textSize="14dp"/>
            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10sp"
                android:text="@string/manifest_para20"
                android:textColor="@color/black"
                android:textSize="14dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10sp"
                android:text="uses-configuration"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10sp"
                android:text="@string/manifest_para21"
                android:textColor="@color/black"
                android:textSize="14dp" />
            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10sp"
                android:text="@string/manifest_para22"
                android:textColor="@color/black"
                android:textSize="14dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10sp"
                android:text="uses-features"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10sp"
                android:text="@string/manifest_para23"
                android:textColor="@color/black"
                android:textSize="14dp"/>
            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10sp"
                android:text="@string/manifest_para24"
                android:textColor="@color/black"
                android:textSize="14dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10sp"
                android:text="permission"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10sp"
                android:text="@string/manifest_para25"
                android:textColor="@color/black"
                android:textSize="14dp"/>
            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10sp"
                android:text="@string/manifest_para26"
                android:textColor="@color/black"
                android:layout_marginBottom="@dimen/_50sdp"
                android:textSize="14dp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>